EW2-EW3-EW4: functionality completed

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+UTILITY_HOST='127.0.0.1'
+UTILITY_PORT=3000
+UTILITY_PROTOCOL='http'
 QUEUE_HOST='127.0.0.1'
 QUEUE_PORT=5672
 QUEUE_NAME='evaluations'
