--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "amqplib": "^0.4.0",
     "dotenv": "^1.2.0",
-    "lmyjo-type": "git+https://github.com/lmyjo/lmyjo-type.git"
+    "lmyjo-type": "git+https://github.com/lmyjo/lmyjo-type.git",
+    "request": "^2.67.0",
+    "url": "^0.11.0"
   }
 }
