--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "worker.js",
   "scripts": {
     "start": "node worker.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make coverage"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,16 @@
     "lmyjo-type": "git+https://github.com/lmyjo/lmyjo-type.git",
     "request": "^2.67.0",
     "url": "^0.11.0"
+  },
+  "devDependencies": {
+    "assert": "^1.3.0",
+    "istanbul": "^0.4.2",
+    "lab": "^8.1.0",
+    "mocha": "^2.3.4",
+    "mocha-istanbul": "^0.2.0",
+    "nock": "^5.2.1",
+    "should": "^8.1.1",
+    "sinon": "^1.17.2",
+    "supertest": "^1.1.0"
   }
 }
