--- a/package.json
+++ b/package.json
@@ -31,12 +31,7 @@
   "devDependencies": {
     "assert": "^1.3.0",
     "istanbul": "^0.4.2",
-    "lab": "^8.1.0",
     "mocha": "^2.3.4",
-    "mocha-istanbul": "^0.2.0",
-    "nock": "^5.2.1",
-    "should": "^8.1.1",
-    "sinon": "^1.17.2",
-    "supertest": "^1.1.0"
+    "mocha-istanbul": "^0.2.0"
   }
 }
